# textual-prometheus

./: .gitignore  README.md  config.toml.example  pyproject.toml
textual_prometheus/: config.py  prom_api.py  tprom.py  tprom.scss
textual_prometheus/renderables/: __init__.py  _plot.py
textual_prometheus/widgets/: __init__.py  _form.py  _historyview.py
