[tool.poetry]
name = "textual-prometheus"
version = "0.1.0"
description = ""
authors = ["Charles Vaillancourt <charles.vaillancourt@corp.ovh.com>"]
readme = "README.md"
packages = [{include = "textual_prometheus"}]

[tool.poetry.dependencies]
python = "^3.10"
textual = "^0.12.1"
requests = "^2.28.2"
plotext = "^5.2.8"
pydantic = "^1.10.5"
tomli = { version = "^2.0.1", python = "<3.11" }
# Only while we wait for upstream to update deps for textual to 0.12.*
textual-autocomplete = {git = "https://github.com/UmBsublime/textual-autocomplete.git"}

[tool.poetry.scripts]
tprom = "textual_prometheus.tprom:main"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
